fix: Fix z-index with appzi tool

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -14,3 +14,7 @@ h1 {
 h2 {
 	@apply text-2xl font-bold;
 }
+
+div[data-appzi-dom='1'] {
+	@apply !z-review;
+}
